ch-02: add xtdb setup, and connection tests